tests/substructural/check/linear_ref_param_untouched_leaks.err.expected
error: at 4:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 4 |             return
   |             ^^^^^^
  = note: reference declared here
   |
 2 |         fn f(r: &out i64) {
   |              ^^^^^^^^^^^
